--- a/style.css
+++ b/style.css
@@ -1,2 +1,183 @@
+@import url('https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap');
+body {
+    margin: 0;
+    padding: 0;
+    overflow: auto;
+    font-family: "Rubik", serif;
+}
 
+.home{
+    background: linear-gradient(90deg, #17ead9, #6078ea);
+    color: #fff;
+    text-align: center;
+    position: relative;
+    height: 100vh; 
+    display: flex; 
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+/* Logo */
+.logo {
+    font-size: 16px; 
+    font-weight: bold;
+    color: white;
+    text-decoration: none;
+    text-transform: uppercase;
+    position: absolute; 
+    left: 60px; 
+    top: 30px;
+}
+
+.logo span {
+    color: #fff;
+}
+
+/* Navegación menú */
+nav {
+    position: absolute;
+    top: 20px;
+    right: 30px;
+    align-items: center;
+}
+
+.menu {
+    list-style: none;
+    padding: 10px;
+    margin: 0;
+    display: flex;
+    gap: 20px;
+}
+
+.menu li a {
+    text-decoration: none;
+    color:white;
+    font-size: 14px;
+    transition: color 0.3s;
+    font-weight: lighter;
+}
+
+/* Sign-Up Button */
+.singUp a {
+    padding: 10px 15px;
+    background-color: transparent;
+    border: 1px solid #ecedee;
+    border-radius: 5px;
+    transition: background-color 0.3s, color 0.3s;
+    color: #6078ea;
+}
+
+.singUp a:hover {
+    background-color: white;
+    color: #6078ea;
+}
+
+/* Banner Text */
+.Textobanner {
+    text-align: center;
+}
+
+.Textobanner h1 {
+    font-size: 53px;
+    line-height: 1.15;
+    font-weight: 300;
+    margin-top: 0;
+    align-items: center;
+}
+
+.Textobanner h2 {
+    font-size: 19px;
+    font-weight: 300;
+    color: #ecedee;
+    line-height: 1.55;
+}
+
+.Textobanner h2 a {
+    color: white;
+    text-decoration: none;
+}
+
+.Textobanner h2 a:hover {
+    color: #ecedee;
+}
+
+.Textobanner.video {
+    margin-top: 20px;
+}
+
+.Textobanner .video a {
+    font-size: 18px;
+    color: white;
+    text-decoration: none;
+    padding-bottom: 5px;
+    transition: all 0.35s ease;
+    font-weight: lighter;
+    display: inline-flex;
+    align-items: center;
+    gap: 5px;
+}
+
+.Textobanner .video a i {
+    transition: transform 0.35s ease;
+}
+
+.Textobanner.video a:hover {
+    transform: translateX(-5px);
+}
+
+.Textobanner .video a:hover i {
+    transform: translateX(10px); 
+}
+
+.container_1 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    padding: 50px;
+    background: #e5e5e5;
+}
+
+.col1, .col2, .col3 {
+    background: white;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0px 4px 6px rgba(255, 255, 255, 0.1);
+    text-align: center;
+    width: 280px;
+}
+
+i {
+    font-size: 30px;
+    color: #4a6df3;
+    margin-bottom: 10px;
+}
+
+h3 {
+    font-size: 18px;
+    color: #333;
+}
+
+p {
+    font-size: 14px;
+    color: #666;
+}
+
+button {
+    margin-top: 460px;
+    padding: 20px 110px;
+    font-size: 15px;
+    font-weight: bolder;
+    background-color: #6078ea;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    position: absolute;
+}
+
+button:hover {
+    background-color:#17ead9;
+}
 
