--- a/style.css
+++ b/style.css
@@ -410,9 +410,6 @@ button:hover {
 }
 
 
-
-
-/* Estilos generales */
 .container_5 {
     background-color: #6078ea;
     color: white;
@@ -421,7 +418,6 @@ button:hover {
     font-size: 18px;
     font-weight: 300;
     line-height: 1.8;
-    
 
 }
 
@@ -438,11 +434,9 @@ button:hover {
     max-width: 700px;
     margin: 0 auto 40px;
     opacity: 0.8;
-    color: white;
-    
+    color: white;  
 }
 
-/* Contenedor de información */
 .info-cont {
     display: grid;
     flex-wrap: wrap;
@@ -454,8 +448,6 @@ button:hover {
     color: #6078ea;
     gap: 10px;
 }
-
-
 
 .col {
     border-radius: 10px;
@@ -485,7 +477,6 @@ button:hover {
     text-align: justify;
 }
 
-/* Colores de los íconos */
 .col:nth-child(1) h3 i { color: #17EAD9; } 
 .col:nth-child(2) h3 i { color: #17EAD9; } 
 .col:nth-child(3) h3 i { color: #17EAD9; } 
@@ -499,3 +490,77 @@ button:hover {
         align-items: center;
     }
 }
+.container_7 {
+    width: 80%;
+    max-width: 1200px;
+    margin: 0 auto;
+    text-align: center;
+    padding: 50px 0;
+}
+
+
+.titulo_principal h2 {
+    font-size: 2.5rem;
+    font-weight:lighter;
+    margin-bottom: 15px;
+}
+
+.titulo_principal p {
+    font-size: 1rem;
+    color: #666;
+    max-width: 600px;
+    margin: 0 auto 40px;
+    line-height: 1.6;
+}
+
+
+.textos {
+    display: flex;
+    justify-content: space-between;
+    gap: 20px;
+}
+
+.text {
+    flex: 1;
+    padding: 20px;
+    border-radius: 10px;
+    text-align: center;
+}
+
+.text h3 {
+    font-size: 1.5rem;
+    color: #333;
+    margin-bottom: 10px;
+}
+
+.text p {
+    font-size: 1rem;
+    color: #666;
+    line-height: 1.6;
+    margin-bottom: 15px;
+}
+
+.text a {
+    font-size: 1rem;
+    font-weight: lighter;
+    color: #007bff;
+    text-decoration: none;
+    
+}
+
+.text a:hover {
+    color:#6078EA;
+}
+
+@media (max-width: 900px) {
+    .textos {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .text {
+        width: 90%;
+    }
+}
+
+
