--- a/style_Blog.css
+++ b/style_Blog.css
@@ -140,3 +140,126 @@ nav {
     transform: translateX(10px); 
 }
 
+/* Contenedor principal */
+.galeria {
+    width: 80%;
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 50px 0;
+}
+
+.info-cont3 {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    gap: 30px;
+
+}
+
+
+.col2 {
+    flex: 1 1 calc(33.333% - 20px);
+    text-align: left;
+    margin-bottom: 40px; 
+}
+
+.col2 img {
+    width: 100%;
+    height: auto;
+    display: block;
+}
+
+
+.col2 p:first-of-type {
+    font-size: 0.9rem;
+    color: #888;
+    margin: 10px 0 5px;
+}
+
+
+.col2 h3 {
+    font-size: 1.3rem;
+    font-weight: lighter;
+    color: #333;
+    margin: 5px 0;
+}
+
+.col2 p {
+    font-size: 1rem;
+    color: #666;
+    line-height: 1.6;
+    margin-bottom: 10px;
+}
+
+
+.col2 a {
+    font-size: 1rem;
+    font-weight: lighter;
+    color:#6078ea;
+    text-decoration: none;
+}
+
+@media (max-width: 900px) {
+    .col2 {
+        flex: 1 1 calc(50% - 20px);
+    }
+}
+
+@media (max-width: 600px) {
+    .col2 {
+        flex: 1 1 100%; 
+    }
+}
+
+.preguntas {
+    padding: 0px 200px 0px 200px;
+    color: #4d4c4c;
+    text-align: center;
+}
+.preguntas .text-center3 h2 {
+    font-size: 25px;
+    font-weight: lighter;
+    color: #4d4c4c;
+    padding: 20px 0 50px 0;
+}
+
+.preguntas .text-center3 p {
+    font-size: 13px;
+    font-weight: lighter;
+    line-height: 1.9;
+    margin-bottom: 50px;
+    color: #7e8890;
+}
+
+.preguntas .info-cont4 {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 0px; 
+}
+
+.preguntas .col3 {
+    padding: 0px; 
+    align-items: center;
+}
+
+
+.preguntas .col3 h3 {
+    font-size: 17px;
+    font-weight: lighter;
+    display: flex;
+    align-items: center;
+    gap: 8px;
+    margin: 0px 0px 0px 10px;
+    color:#3a3a3a;
+}
+
+
+.preguntas .col3 p {
+    font-size: 13px;
+    font-weight: lighter;
+    text-align: left;
+    padding: 0px;
+    line-height: 1.8;
+    margin: 10px;
+    color:#7e8890;
+}
