--- a/pricing_Style.css
+++ b/pricing_Style.css
@@ -194,17 +194,73 @@ ul li {
 }
 
 button {
-    background: #6d6df7;
+    padding: 12px;;
+    font-size: 16px;
+    font-weight: lighter;
+    background-color: #6078ea;
     color: white;
     border: none;
-    padding: 12px;
-    font-size: 16px;
-    cursor: pointer;
-    width: 100%;
     border-radius: 6px;
+    cursor: pointer;
+    align-items: center;
+    width: 100%;
     margin-top: 20px;
 }
 
+
 button:hover {
-    background: #6078ea;
+    background-color:#17ead9;
+}
+
+.preguntas {
+    padding: 0px 200px 0px 200px;
+    color: #4d4c4c;
+    text-align: center;
+}
+.preguntas .text-center3 h2 {
+    font-size: 25px;
+    font-weight: lighter;
+    color: #4d4c4c;
+    padding: 20px 0 50px 0;
+}
+
+.preguntas .text-center3 p {
+    font-size: 13px;
+    font-weight: lighter;
+    line-height: 1.9;
+    margin-bottom: 50px;
+    color: #7e8890;
+}
+
+.preguntas .info-cont4 {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 0px; 
+}
+
+.preguntas .col3 {
+    padding: 0px; 
+    align-items: center;
+}
+
+
+.preguntas .col3 h3 {
+    font-size: 17px;
+    font-weight: lighter;
+    display: flex;
+    align-items: center;
+    gap: 8px;
+    margin: 0px 0px 0px 10px;
+    color:#3a3a3a;
+}
+
+
+.preguntas .col3 p {
+    font-size: 13px;
+    font-weight: lighter;
+    text-align: left;
+    padding: 0px;
+    line-height: 1.8;
+    margin: 10px;
+    color:#7e8890;
 }
