--- a/pricing_Style.css
+++ b/pricing_Style.css
@@ -89,11 +89,10 @@ nav {
 }
 
 .Textobanner h1 {
-    font-size: 53px;
-    line-height: 1.15;
+    font-size: 67px;
+    color: #fff;
     font-weight: 300;
-    margin-top: 0;
-    align-items: center;
+    line-height: 1.15;
 }
 
 .Textobanner h2 {
@@ -205,9 +204,8 @@ button {
     align-items: center;
     width: 100%;
     margin-top: 20px;
+
 }
-
-
 button:hover {
     background-color:#17ead9;
 }
