--- a/pricing_Style.css
+++ b/pricing_Style.css
@@ -89,10 +89,11 @@ nav {
 }
 
 .Textobanner h1 {
-    font-size: 67px;
-    color: #fff;
-    font-weight: 300;
+    font-size: 53px;
     line-height: 1.15;
+    font-weight: 300;
+    margin-top: 0;
+    align-items: center;
 }
 
 .Textobanner h2 {
